<resources>
    <string name="app_name">USTH chat</string>
    <string name="send_desc">Send message</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_file">Pick file</string>
    <string name="message_chat">Message #chat</string>
    <string name="direct_message">Direct message</string>
    <string name="user_list">User List</string>
    <string name="enter_username_example">Enter username (e.g: Hải)</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="send">Send</string>
    <string name="hint_user">Message @user</string>
    <string name="hint_group">Message #group</string>
    <string name="login">LOGIN</string>
    <string name="server">Server</string>
    <string name="nickname">Nickname</string>
    <string name="channel">Channel</string>
    <string name="usth_ircui">#usth-ircui</string>
    <string name="join_chat">Join Chat</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="settings">Settings</string>
    <string name="theme_settings">Theme</string>
    <string name="theme_system">System Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="notification_settings">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_sound">Enable sound</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="show_timestamps">Show timestamps</string>
    <string name="auto_connect">Auto connect on startup</string>
    <string name="show_join_leave">Show join/leave messages</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="message_settings">Message Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="message_font_size">Message font size</string>
    <string name="refresh">Refresh</string>
    <string name="user_info">User Info</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="account_management">Account Management</string>
    <string name="profile">Profile</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="activity_status">Activity Status</string>
    <string name="online_status">Online Status</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="language_settings">Language</string>
    <string name="language">Language</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="choose_language">Choose Language</string>
    <string name="restart_app_message">Application restart required to apply language changes</string>
    <string name="language_changed_message">Language changed</string>
    <string name="refreshing">Refreshing...</string>
    <string name="username">Username</string>
    <string name="server_connected">Server: Connected</string>
    <string name="developed_for_usth">Developed for USTH</string>
    <string name="confirm_clear_history">Are you sure you want to clear chat history?</string>
    <string name="chat_history_cleared">Chat history cleared</string>
    <string name="profile_settings_message">Open profile settings</string>
    <string name="account_management_message">Open account management</string>
    <string name="dark_mode_enabled">Switched to dark mode</string>
    <string name="dark_mode_disabled">Switched to light mode</string>
    <string name="server_label">Server:</string>
    <string name="joined_label">Joined:</string>
    <string name="activity_label">Activity:</string>
    <string name="connected">Connected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_language">EN</string>
    <string name="password">Password</string>
    <string name="irc" translatable="false">IRC</string>
    <string name="register">REGISTER</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="choose_the_server_which_you_want_to_enter_for_chatting">Choose the server which you want to enter for chatting</string>
    <string name="choose_server">Choose Server</string>
    <string name="enter_server">Enter Server</string>
    <string name="search">Search</string>
    <string name="channels">Channels</string>
    <string name="add_channel">Add Channel</string>
    <string name="add_channel_dialog_title">Add Channel</string>
    <string name="add_channel_hint">Enter channel name (e.g., #newchannel)</string>
    <string name="channel_added">Channel added: %s</string>
    <string name="enter_channel_name">Please enter a channel name</string>
    <string name="switching_to_channel">Switching to %s</string>
    <string name="channel_message">Channel Message</string>
    <string name="back">Back</string>
    <string name="medium">Medium</string>
    <string name="user_profile">User Profile</string>
    <string name="username_placeholder">Username</string>
    <string name="online">Online</string>
    <string name="user_information">User Information</string>
    <string name="server_placeholder">irc.libera.chat</string>
    <string name="joined">Joined</string>
    <string name="today">Today</string>
    <string name="activity">Activity</string>
    <string name="active_now">Active now</string>
    <string name="start_chat">Start Chat</string>
    <string name="online_users">Online Users (0)</string>
    <string name="guest">Guest</string>
    <string name="welcome_to_usth_irc">Welcome to USTH IRC</string>
    <string name="use_as_guest">Use as Guest</string>
    <string name="channel_placeholder">#channel</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="choose_photo_description">Choose a photo that represents you!</string>
    <string name="next">Next</string>
    <string name="switched_to_server">Switched to %s</string>
</resources>