<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Right Drawer Menu Item (3 dots) -->
    <item
        android:id="@+id/action_right_drawer"
        android:icon="@android:drawable/ic_menu_more"
        android:title="Server Menu"
        app:showAsAction="ifRoom" />

    <!-- More options (will appear in overflow menu) -->
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_chat_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>