<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgPrimary">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direct_message"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/accent"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/enterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_username_example"
        android:textColor="@android:color/white"
        android:textColorHint="@color/gray"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="textPersonName" />

    <!-- Button Line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/gray" />

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/accent" />
    </LinearLayout>
</LinearLayout>
