<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/choose_server"
        android:textColor="?attr/colorOnSurface"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/choose_the_server_which_you_want_to_enter_for_chatting"
        android:textColor="?attr/colorOnSurface"
        android:textSize="12dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="?attr/colorSecondaryContainer"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@android:drawable/ic_menu_search" />

            <AutoCompleteTextView
                android:id="@+id/serverInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/searchIcon"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:hint="@string/search"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                android:textColor="?attr/colorOnSurface"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:dropDownHeight="wrap_content"/>
            <!--android:dropDownBackground="@colors/dropdown_bg"/>-->
    </RelativeLayout>
</androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterServer"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/enter_server"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
